--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,7 +1,6 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-08-07 11:49:44
-# Total rules: 6858
+# Generated from relevant_rules_wildcard_aware.txt on 2025-08-08 11:13:25
+# Total rules: 6853
 
-.0914.global.ssl.fastly.net
 .0a0d-d3l1vr.b-cdn.net
 .0gc6y58nkk.data.adobedc.net
 .0m1hix10po.data.adobedc.net
@@ -103,7 +102,6 @@
 .a11391265293.cdn.optimizely.com
 .a11673470095.cdn.optimizely.com
 .a11806872970.cdn.optimizely.com
-.a11925324355.cdn.optimizely.com
 .a1208440116.cdn.optimizely.com
 .a12265111463.cdn.optimizely.com
 .a125375509.cdn.optimizely.com
@@ -229,10 +227,10 @@
 .a21362261371.cdn.optimizely.com
 .a21362900246.cdn.optimizely.com
 .a21394690517.cdn.optimizely.com
-.a214661394.cdn.optimizely.com
 .a21645491094.cdn.optimizely.com
 .a21711352012.cdn.optimizely.com
 .a21723500485.cdn.optimizely.com
+.a21775920234.cdn.optimizely.com
 .a21777400434.cdn.optimizely.com
 .a21837592637.cdn.optimizely.com
 .a21861931614.cdn.optimizely.com
@@ -257,6 +255,7 @@
 .a23018580040.cdn.optimizely.com
 .a23038660059.cdn.optimizely.com
 .a2320460149.cdn.optimizely.com
+.a23477880699.cdn.optimizely.com
 .a23497771291.cdn.optimizely.com
 .a23730662547.cdn.optimizely.com
 .a23736871217.cdn.optimizely.com
@@ -265,11 +264,11 @@
 .a23762020753.cdn.optimizely.com
 .a23791891397.cdn.optimizely.com
 .a23810210071.cdn.optimizely.com
-.a24016540275.cdn.optimizely.com
 .a24086370557.cdn.optimizely.com
 .a24096340716.cdn.optimizely.com
 .a24099230963.cdn.optimizely.com
 .a24132941202.cdn.optimizely.com
+.a24159280403.cdn.optimizely.com
 .a24201730177.cdn.optimizely.com
 .a24312020311.cdn.optimizely.com
 .a24344740158.cdn.optimizely.com
@@ -301,8 +300,10 @@
 .a24987910037.cdn.optimizely.com
 .a25010540072.cdn.optimizely.com
 .a25011560114.cdn.optimizely.com
+.a25064110354.cdn.optimizely.com
 .a25166270452.cdn.optimizely.com
 .a25178000050.cdn.optimizely.com
+.a25229420187.cdn.optimizely.com
 .a25237771658.cdn.optimizely.com
 .a25241431181.cdn.optimizely.com
 .a25241461358.cdn.optimizely.com
@@ -311,7 +312,6 @@
 .a25264541367.cdn.optimizely.com
 .a25289140643.cdn.optimizely.com
 .a25342060228.cdn.optimizely.com
-.a25402510199.cdn.optimizely.com
 .a25408250069.cdn.optimizely.com
 .a25451710626.cdn.optimizely.com
 .a25473630273.cdn.optimizely.com
@@ -319,7 +319,6 @@
 .a25522010911.cdn.optimizely.com
 .a25546140325.cdn.optimizely.com
 .a25563730275.cdn.optimizely.com
-.a25572030068.cdn.optimizely.com
 .a25577230094.cdn.optimizely.com
 .a25597130164.cdn.optimizely.com
 .a25621540041.cdn.optimizely.com
@@ -389,7 +388,6 @@
 .a27268010056.cdn.optimizely.com
 .a27274641010.cdn.optimizely.com
 .a27469530272.cdn.optimizely.com
-.a27526310069.cdn.optimizely.com
 .a275532918.cdn.optimizely.com
 .a27673780102.cdn.optimizely.com
 .a2784720778.cdn.optimizely.com
@@ -398,8 +396,8 @@
 .a28007920049.cdn.optimizely.com
 .a28218570026.cdn.optimizely.com
 .a28361970244.cdn.optimizely.com
+.a28409520185.cdn.optimizely.com
 .a28417170302.cdn.optimizely.com
-.a28437560005.cdn.optimizely.com
 .a2854150041.cdn.optimizely.com
 .a28554780121.cdn.optimizely.com
 .a28562140225.cdn.optimizely.com
@@ -413,7 +411,6 @@
 .a29494440593.cdn.optimizely.com
 .a29563440009.cdn.optimizely.com
 .a29586640232.cdn.optimizely.com
-.a29598040139.cdn.optimizely.com
 .a29623890030.cdn.optimizely.com
 .a29730520486.cdn.optimizely.com
 .a29742610112.cdn.optimizely.com
@@ -451,6 +448,7 @@
 .a47b-collector-alb-630215029.us-east-1.elb.amazonaws.com
 .a47b-collector-eu-alb-1031015564.eu-west-1.elb.amazonaws.com
 .a4806508815319040.cdn.optimizely.com
+.a4912227187163136.cdn.optimizely.com
 .a4978460394.cdn.optimizely.com
 .a4983603034062848.cdn.optimizely.com
 .a4993150444371968.cdn.optimizely.com
@@ -468,19 +466,15 @@
 .a5366642083889152.cdn.optimizely.com
 .a5435521705.cdn.optimizely.com
 .a5465611416.cdn.optimizely.com
-.a5552561554456576.cdn.optimizely.com
 .a5584628518486016.cdn.optimizely.com
 .a5590338467790848.cdn.optimizely.com
 .a5595260258.cdn.optimizely.com
 .a5676741851611136.cdn.optimizely.com
-.a5682661843271680.cdn.optimizely.com
 .a5698391926112256.cdn.optimizely.com
 .a5728063363743744.cdn.optimizely.com
-.a5729668758765568.cdn.optimizely.com
 .a5740182066954240.cdn.optimizely.com
 .a5763127292198912.cdn.optimizely.com
 .a5807877756026880.cdn.optimizely.com
-.a5809436334227456.cdn.optimizely.com
 .a591102174.cdn.optimizely.com
 .a5935064.cdn.optimizely.com
 .a5961084.cdn.optimizely.com
@@ -488,13 +482,13 @@
 .a6040864640729088.cdn.optimizely.com
 .a6071352323473408.cdn.optimizely.com
 .a6076186451771392.cdn.optimizely.com
+.a6084697625722880.cdn.optimizely.com
 .a61135178.cdn.optimizely.com
 .a6136581106.cdn.optimizely.com
 .a6147442509348864.cdn.optimizely.com
 .a6147784059912192.cdn.optimizely.com
 .a6157793305034752.cdn.optimizely.com
 .a6169963916951552.cdn.optimizely.com
-.a6217617971609600.cdn.optimizely.com
 .a6238166017900544.cdn.optimizely.com
 .a6253774759526400.cdn.optimizely.com
 .a6295702960078848.cdn.optimizely.com
@@ -503,6 +497,7 @@
 .a6504733288955904.cdn.optimizely.com
 .a6524475903049728.cdn.optimizely.com
 .a6529002483.cdn.optimizely.com
+.a6549461774630912.cdn.optimizely.com
 .a6558036.cdn.optimizely.com
 .a6561280243.cdn.optimizely.com
 .a659682401.cdn.optimizely.com
@@ -594,7 +589,6 @@
 .ad-interactions-prod-lb-484900216.ap-northeast-1.elb.amazonaws.com
 .ad-interactions-prod-lb-773417274.us-east-2.elb.amazonaws.com
 .ad-log-upload.mihoyo.com
-.ad-material.ys7.com
 .ad-particlenews-com-2-1579123584.us-west-2.elb.amazonaws.com
 .ad-pdf.s3.amazonaws.com
 .ad-serve.b-cdn.net
@@ -730,7 +724,6 @@
 .adpai.thepaper.cn
 .adping.qq.com
 .adpm.app.qq.com
-.adproxy.autohome.com.cn
 .adpublisher.s3.amazonaws.com
 .adrdir.qq.com
 .adreq.vivo.com.cn
@@ -758,6 +751,7 @@
 .ads-prod-narrowcasting.s3.us-west-2.amazonaws.com
 .ads-production-public.s3.amazonaws.com
 .ads-production-public.s3.us-east-1.amazonaws.com
+.ads-rendering-prod.corp.google.com
 .ads-sdk-gateway.prd.mz.internal.unity3d.com
 .ads-server-lb-145243948.ap-southeast-1.elb.amazonaws.com
 .ads-setu-proxy-eu.amazon.com
@@ -832,6 +826,7 @@
 .adserver-1964701068.eu-west-1.elb.amazonaws.com
 .adserver-2084671375.us-east-1.elb.amazonaws.com
 .adserver-alb-prod-1154786121.us-east-1.elb.amazonaws.com
+.adserver-load-balancer-449180619.us-east-1.elb.amazonaws.com
 .adserver-vpc-alb-1-725730730.us-west-2.elb.amazonaws.com
 .adserver.bing.com
 .adservergatewayprod.southcentralus.cloudapp.azure.com
@@ -839,7 +834,6 @@
 .adservice.google.com
 .adservice.kugou.com
 .adserviceretry.kugou.com
-.adservingvpc-1239633584.eu-west-1.elb.amazonaws.com
 .adsfile.bssdlbig.kugou.com
 .adsfile.qq.com
 .adsfilebssdlbig.ali.kugou.com
@@ -878,7 +872,6 @@
 .adsview.qq.com
 .adsview2.qq.com
 .adsyndication.msn.com
-.adsz.wagbridge.tanx.alimama.com
 .adtago.s3.amazonaws.com
 .adtech.coingecko.com
 .adtechvideo.s3.amazonaws.com
@@ -974,6 +967,7 @@
 .alissl.ucdl.pp.uc.cn
 .alitui.weibo.com
 .aliyaoberbrunnergreg21.myshopify.com
+.alpwiijq5x.data.adobedc.net
 .als-svc.nytimes.com
 .altmetric.com
 .altura-advertising.s3.eu-west-2.amazonaws.com
@@ -1139,7 +1133,6 @@
 .api.waptest.taobao.com
 .api.xmpush.global.xiaomi.com
 .api.youqian.baidu.com
-.api.youtu.qq.com
 .apiinit.amap.com
 .apikey.map.qq.com
 .apiproxy-log-nlb-0dbe90394fe752bf.elb.us-west-2.amazonaws.com
@@ -1295,6 +1288,7 @@
 .bce.baidu.com
 .bchtstmets.data.adobedc.net
 .bcs.data.adobedc.net
+.bd.com.data.adobedc.net
 .bd.hd.sohu.com
 .bdg-analytics.appspot.com
 .bdplus.baidu.com
@@ -1479,6 +1473,7 @@
 .c1.microsoft.com
 .c4-ads-creative-prod.s3.eu-west-1.amazonaws.com
 .c783.fastcompany.com
+.cac-visio-telemetry.officeapps.live.com
 .cache.datamart.windows.com
 .caclick.baidu.com
 .cad.youku.com
@@ -1521,7 +1516,6 @@
 .cdn-s-optional.optimizely.com
 .cdn.ark.qq.com
 .cdn.exp.xiaomi.com
-.cdn.onesignal.com
 .cdn.shareaholic.net
 .cdn.tanx.com
 .cdn3.optimizely.com
@@ -1530,9 +1524,9 @@
 .cdp.cloud.unity.cn
 .cdp.cloud.unity3d.com
 .ce-data-collector-api-prod-alb2-1611447619.ap-south-1.elb.amazonaws.com
+.cedarssinaimedicalcenter.data.adobedc.net
 .centene.com.data.adobedc.net
 .centene.data.adobedc.net
-.centralus-ads.centralus.cloudapp.azure.com
 .cert-test.sandbox.google.com
 .ceshi127722.obs.cn-north-4.myhuaweicloud.com
 .ceuswatcab01.blob.core.windows.net
@@ -1637,6 +1631,7 @@
 .cnbj1.fds.api.xiaomi.com
 .cnzz.com
 .co.data.adobedc.net
+.coca-cola.com.data.adobedc.net
 .coins.arstechnica.com
 .collect.alipay.com
 .collect.ctc.ximalaya.com
@@ -1738,7 +1733,6 @@
 .crashsight-logs-1319323203.cos.accelerate.myqcloud.com
 .crashsight.qq.com
 .crazyegg.com.cdn.cloudflare.net
-.crazygames-prod-nlb-analytics-v2-c172572ce2967be1.elb.us-west-2.amazonaws.com
 .cre-dp.sina.cn
 .cre.dp.sina.cn
 .cre.mix.sina.com.cn
@@ -3409,6 +3403,7 @@
 .dns.weixin.qq.com.cn
 .dns.ximalaya.com
 .dnxlgencstz4.cloudfront.net
+.dnzedhceh7nim.cloudfront.net
 .do0digwedphcm.cloudfront.net
 .do1dns3y1w33m.cloudfront.net
 .do6256x8ae75.cloudfront.net
@@ -3438,6 +3433,7 @@
 .doubleverify.com.cdn.cloudflare.net
 .down.360.cn
 .download-stats.mozilla.org
+.download-stats.r53-2.services.mozilla.com
 .download.bav.baidu.com
 .download.sd.baidu.com
 .download.sj.qq.com
@@ -3459,6 +3455,7 @@
 .dpi.networkorder.komect.com
 .dpirwgljl6cjp.cloudfront.net
 .dpjlvaveq1byu.cloudfront.net
+.dpl-pr-googletm-tagging-1717453208.eu-central-1.elb.amazonaws.com
 .dppaivsn6f9dy.cloudfront.net
 .dpsq2uzakdgqz.cloudfront.net
 .dpst35vkvd2u3.cloudfront.net
@@ -3674,7 +3671,6 @@
 .entitlements.jwplayer.com
 .entrecard.s3.amazonaws.com
 .entry.baidu.com
-.entrykeyid.com.data.adobedc.net
 .epic-matomo-prd-fxccc0gmebhpdjgh.z01.azurefd.net
 .epro.sogou.com
 .epro.sohu.com
@@ -3928,8 +3924,10 @@
 .gld.samsungosp.com
 .glitter.services.disqus.com
 .global-ad-extranet-pri-azams.alb.xiaomi.com
+.global-ad-extranet-pri-azpn.alb.xiaomi.com
 .global-ad-intl-pri-alisgp.alb.xiaomi.com
 .global-staticplat.cdn.bcebos.com
+.globalnews.ca.data.adobedc.net
 .globalvideo.cdn.pandora.intl.xiaomi.com
 .gma.alicdn.com
 .gmfinancial.data.adobedc.net
@@ -3937,7 +3935,6 @@
 .go-mpulse.net
 .go.shop.app
 .go.sohu.com
-.go.taylorandfrancis.com
 .go.test.shop.app
 .go.webtoons.com
 .go.zendesk.com
@@ -4171,6 +4168,7 @@
 .hyros-prod-tracking-elb-1961909740.us-east-1.elb.amazonaws.com
 .hz-telemetry.adobe.io
 .hz.youku.com
+.i-cmg-amlg-prod.appspot.com
 .i.eporner.com
 .i.paypal.com
 .i.posthog.com
@@ -4196,8 +4194,8 @@
 .ichnaea-web.netflix.com
 .ichnaea.dradis.netflix.com
 .ichnaea.netflix.com
-.icicisecuritiesltd.data.adobedc.net
 .id.google.com
+.id.l.google.com
 .idce7nfume.data.adobedc.net
 .identity.nel.measure.office.net
 .idm-su.baidu.com
@@ -4216,6 +4214,7 @@
 .igexin.com
 .ignifyecom.s3.amazonaws.com
 .ihg.com.data.adobedc.net
+.iix5saebir.data.adobedc.net
 .ikcode.baidu.com
 .ilce.alicdn.com
 .ilive.qq.com
@@ -4293,7 +4292,6 @@
 .inte.sogou.com
 .inte.sogoucdn.com
 .inte.sohu.com
-.intensedebate.com
 .interbank.data.adobedc.net
 .interest.mix.sina.com.cn
 .interface.bilibili.com
@@ -4319,6 +4317,7 @@
 .isdspeed.qq.com
 .isite.baidu.com
 .isx.unity3d.com
+.it16akp2xi.data.adobedc.net
 .its-dori.tumblr.com
 .itsdata.map.baidu.com
 .ivkpkdxs6q.data.adobedc.net
@@ -4394,7 +4393,6 @@
 .kuaibao.qq.com
 .kuiniuca.com
 .kvop8mlpon.data.adobedc.net
-.kwa3a4b13f.data.adobedc.net
 .kwurl.ucweb.com
 .kxlogo.knet.cn
 .l.qq.com
@@ -4464,7 +4462,6 @@
 .log-26d6cd71.us.v2.we-stats.com
 .log-2c864c4b.eu.v2.we-stats.com
 .log-2f6769e4.us.v2.we-stats.com
-.log-2ffe60ee.au.v2.we-stats.com
 .log-3347ea06.bzl.v2.we-stats.com
 .log-3fbbe2c8.us.v2.we-stats.com
 .log-453ea5e6.ind.v2.we-stats.com
@@ -4482,6 +4479,7 @@
 .log-96951fce.us.v2.we-stats.com
 .log-9fd5e9cc.us.v2.we-stats.com
 .log-a4494242.us.v2.we-stats.com
+.log-ac77ffef.us.v2.we-stats.com
 .log-ad1a29c5.us.v2.we-stats.com
 .log-auth.flysleep.cn
 .log-b414bfba.us.v2.we-stats.com
@@ -4495,9 +4493,10 @@
 .log-cba38438.us.v2.we-stats.com
 .log-d177b4a1.us.v2.we-stats.com
 .log-d515dc6a.suk.v2.we-stats.com
-.log-db166e4b.ind.v2.we-stats.com
 .log-dbff2e04.us.v2.we-stats.com
+.log-dfb31537.us.v2.we-stats.com
 .log-e206d7e2.us.v2.we-stats.com
+.log-e25be1b9.us.v2.we-stats.com
 .log-e5093e82.us.v2.we-stats.com
 .log-eb5c5b30.us.v2.we-stats.com
 .log-edc5180c.us.v2.we-stats.com
@@ -4542,7 +4541,6 @@
 .log.wechatpay.cn
 .log.weixin.qq.com
 .log.wtlogin.qq.com
-.log.ys7.com
 .log.zijieapi.com
 .log0-misc-alinc2.amemv.com
 .log0-misc-lf.amemv.com
@@ -4564,7 +4562,6 @@
 .logapi-and.zhipin.com
 .logapi-ios.zhipin.com
 .logapi.zhipin.com
-.logger.unsplash.com
 .loggw-ex.alipay.com
 .loggw-exsdk.alipay.com
 .loggw.alipay.com
@@ -4670,6 +4667,7 @@
 .marketing.dropbox.com
 .marketing.mangacopy.com
 .marketo.clearbit.com
+.marriottvacationclub.com.data.adobedc.net
 .mars.jd.com
 .marshandmclennan.data.adobedc.net
 .martech.condenastdigital.com
@@ -4679,7 +4677,6 @@
 .match.p4p.1688.com
 .matchbin-assets.s3.amazonaws.com
 .matomo-alb-1841731790.us-east-1.elb.amazonaws.com
-.matomo-lb-1189108675.us-east-2.elb.amazonaws.com
 .matomo-lb-1420184415.us-east-1.elb.amazonaws.com
 .matomo-wpmudev-analytics1-925643958.us-east-2.elb.amazonaws.com
 .matomo-wpmudev-analytics2-742601353.us-east-2.elb.amazonaws.com
@@ -4885,6 +4882,7 @@
 .mtrace.qq.com
 .mtvod-ali.meituan.net
 .mum.alibabachengdun.com
+.muon-collector-kube-1510719261.ca-central-1.elb.amazonaws.com
 .musculahq.appspot.com
 .mvads.kugou.com
 .mvchallenges.s3-website-eu-west-1.amazonaws.com
@@ -5033,7 +5031,6 @@
 .orbsrv.com
 .org.data.adobedc.net
 .ort-stsdk.vivo.com.cn
-.os-mon.snssdk.com
 .os-mon.zijieapi.com
 .osc-collector-lb-931361364.us-west-2.elb.amazonaws.com
 .osdkupdatenw.com
@@ -5373,6 +5370,7 @@
 .pyk.in-neo.cn
 .q0jo16uy1r.data.adobedc.net
 .qalsqqphhy.data.adobedc.net
+.qantasairways.data.adobedc.net
 .qapm.baidu.com
 .qc.arstechnica.com
 .qc.newyorker.com
@@ -5436,6 +5434,7 @@
 .rdx.autohome.com.cn
 .re.m.taobao.com
 .re.taobao.com
+.reachableads-av.s3.ap-southeast-1.amazonaws.com
 .reachmax.cn
 .read.medium.com
 .recirculation.spot.im
@@ -5477,7 +5476,6 @@
 .report.trade.weixin.qq.com
 .report.tv.kohesport.qq.com
 .report.vip.qq.com
-.report.yumobi.cn
 .request.verisign.com
 .res.mi.baidu.com
 .rescn.u3.ucweb.com
@@ -5531,7 +5529,6 @@
 .rtlog22-normal-useast1a.tiktokv.com
 .rtmonitor.kugou.com
 .rtwebcollects.kugou.com
-.ru.video.intl.xiaomi.com
 .rubiconproject.com
 .rum-metrics.bunny.net
 .rum.ap-northeast-1.amazonaws.com
@@ -5624,7 +5621,6 @@
 .sdtagging.azureedge.net
 .se.360.cn
 .sea.napi.ucweb.com
-.seal.digicert.com
 .seal.globalsign.com
 .seal.godaddy.com
 .sealine.youku.com
@@ -5657,7 +5653,6 @@
 .sentry.io
 .sentry.music.163.com
 .server-side-tagging-alb-1532029273.eu-central-1.elb.amazonaws.com
-.server.iad.liveperson.net
 .serveraddr.service.kugou.com
 .service.danmu.youku.com
 .sestat.baidu.com
@@ -5682,7 +5677,6 @@
 .share.baidu.com
 .sharethis.com
 .shell.com.data.adobedc.net
-.shell.data.adobedc.net
 .shenghuo.xiaomi.com
 .shooter.m.jd.com
 .shouji.360.cn
@@ -5827,9 +5821,7 @@
 .stat.ykimg.com
 .stat.youku.com
 .stat.youpin.mi.com
-.statestreet.com.data.adobedc.net
 .static-addtoany-com.cdn.ampproject.org
-.static-ads.akamaized.net
 .static-doubleclick-net.l.google.com
 .static-s.iqiyi.com
 .static.addtoany.com
@@ -5871,6 +5863,7 @@
 .stats.wp.com
 .stats2.arstechnica.com
 .stats2.newyorker.com
+.statscollector-1-asia.agora.io
 .statscollector-1-north-america.agora.io
 .statscollector-1.agora.io
 .statsfe1.ws.microsoft.com
@@ -5932,7 +5925,6 @@
 .t.dukemag.duke.edu
 .t.dukewin.duke.edu
 .t.e.x.com
-.t.eloqua.com
 .t.foundationrelations.duke.edu
 .t.giving.duke.edu
 .t.honorroll.duke.edu
@@ -5956,6 +5948,7 @@
 .tagcontrol-collector-v2-prod-1517665634.us-east-1.elb.amazonaws.com
 .tagdelivery.mayoclinic.org
 .tags.voacantonese.com
+.taiji.sina.cn
 .tajs.qq.com
 .talkback-public.mozilla.org
 .talkback-reports.mozilla.org
@@ -6313,10 +6306,10 @@
 .vcs.zijieapi.com
 .vd.contents.prod.eu.s3.amazonaws.com
 .vd.emp.prd.s3.amazonaws.com
-.vebo-vast.pages.dev
 .vegslb.com
 .vendorlist.consensu.org
 .venezia-measurements.s3-external-1.amazonaws.com
+.verizontelecom.data.adobedc.net
 .vf.startpage.com
 .vhotwsh.video.qq.com
 .video-ad.sm.cn
@@ -6366,7 +6359,6 @@
 .w3-reporting-nel.reddit.com
 .w3-reporting.reddit.com
 .w4aa025brr.data.adobedc.net
-.w8a27b25y5.data.adobedc.net
 .wa.gtimg.com
 .walmartasda.data.adobedc.net
 .wan.360.cn
@@ -6489,7 +6481,6 @@
 .xlog.snssdk.com
 .xlog.tiktokv.com
 .xlog16-normal-c-useast1a.tiktokv.com
-.xlog16-platform-ycru.tiktokv.com
 .xmaterial.tu.qq.com
 .xmpush.xiaomi.com
 .xne1ocient87zxz.360doc.cn
@@ -6584,6 +6575,7 @@ adc.hpplay.cn
 adcdn.hpplay.cn
 adeng.hpplay.cn
 adimg.uve.weibo.com
+adproxy.autohome.com.cn
 adsh.m.taobao.com
 adsh.wagbridge.1688.alimama.com
 adsh.wagbridge.alibaba.alimama.com
@@ -6591,6 +6583,7 @@ adsh.wagbridge.tanx.alimama.com
 adsh.wagbridge.taobao.alimama.com
 adsh.wagbridge.tmall.alimama.com
 adsz.wagbridge.1688.alimama.com
+adsz.wagbridge.tanx.alimama.com
 adsz.wagbridge.taobao.alimama.com
 adsz.wagbridge.tmall.alimama.com
 adt.cpatrk.net
@@ -6734,6 +6727,7 @@ loan-supermarket.faas.ele.me
 log.mmstat.com
 log.star.ele.me
 log.stat.kugou.com
+log.ys7.com
 logview.uc.alimama.com
 lookup.api.bsb.baidu.com
 ls.l.qq.com
@@ -6791,6 +6785,7 @@ r.dmp.sina.cn
 r.dmp.sina.com.cn
 rc-topic-api.bz.mgtv.com
 render-web.11222.cn
+report.yumobi.cn
 rprain.bz.mgtv.com
 saxs.sina.cn
 sdkapp.uve.weibo.com
