--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-08-09 22:29:07
-# Total rules: 6795
+# Generated from relevant_rules_wildcard_aware.txt on 2025-08-10 10:22:16
+# Total rules: 6827
 
 .0a0d-d3l1vr.b-cdn.net
 .0gc6y58nkk.data.adobedc.net
@@ -7,6 +7,7 @@
 .0nvdw1kkeb.data.adobedc.net
 .1.wps.cn
 .1080872514.rsc.cdn77.org
+.1097834592.rsc.cdn77.org
 .1187531871.rsc.cdn77.org
 .119.29.196.104.bc.googleusercontent.com
 .1208344341.rsc.cdn77.org
@@ -16,7 +17,6 @@
 .12551-1311572332.cos.ap-shanghai.myqcloud.com
 .1437953666.rsc.cdn77.org
 .1480876790.rsc.cdn77.org
-.1493361689.rsc.cdn77.org
 .1529462937.rsc.cdn77.org
 .1548164934.rsc.cdn77.org
 .1558334541.rsc.cdn77.org
@@ -27,13 +27,17 @@
 .1wincdn.b-cdn.net
 .2016.sina.cn
 .2052.flash2-http.qq.com
+.2g312kn32qfy-1323053341.cos.ap-bangkok.myqcloud.com
 .2ihjjahguz.data.adobedc.net
 .2mdn.net
 .2xbits.eu.org
 .365dmp.com
 .37bvsblobprodcus311.blob.core.windows.net
+.3dns-1.adobe.com
 .3dns-2.adobe.com
 .3dns-3.adobe.com
+.3dns-4.adobe.com
+.3dns.adobe.com
 .3e9le7p41u.data.adobedc.net
 .3kbmk3nerc.data.adobedc.net
 .3rd.t.sohu.com
@@ -586,6 +590,7 @@
 .ad.dev.360.cn
 .ad.docer.wps.cn
 .ad.doubanio.com
+.ad.eporner.com
 .ad.gmw.cn
 .ad.gt.cdn.cloudflare.net
 .ad.imp.joins.com
@@ -624,6 +629,7 @@
 .ad4.sina.com.cn
 .ad5.sina.com.cn
 .ada.baidu.com
+.adagiobanner.s3.amazonaws.com
 .adapi.foooooot.com
 .adash-c.m.taobao.com
 .adash-c.ut.taobao.com
@@ -901,6 +907,7 @@
 .aepxlg.adobe.com
 .afd.baidu.com
 .afd.l.google.com
+.affiliate.googleusercontent.com
 .affiliates.bhphotovideo.com
 .affilimate.io
 .affim.baidu.com
@@ -961,7 +968,6 @@
 .amfi.gou.sogou.com
 .amp-error-reporting.appspot.com
 .amplitude.com
-.ampmetrics.engadget.com
 .amptrack-dailymail-co-uk.cdn.ampproject.org
 .ams-pageview-public.s3.amazonaws.com
 .an.facebook.com
@@ -977,7 +983,6 @@
 .analytics-consent-manager-v2-prod.azureedge.net
 .analytics-consent-manager.azureedge.net
 .analytics-dev-lleap-events.servicebus.windows.net
-.analytics-digit-in.cdn.ampproject.org
 .analytics-events.apple.com
 .analytics-ingestion-2000866608.ap-south-1.elb.amazonaws.com
 .analytics-prod-alb-292764149.us-west-2.elb.amazonaws.com
@@ -1108,7 +1113,6 @@
 .api.miwifi.com
 .api.mp.uc.cn
 .api.newsfeed.intl.miui.com
-.api.sec.intl.miui.com
 .api.sentry.susercontent.com
 .api.setting.intl.miui.com
 .api.sms.intl.miui.com
@@ -1197,10 +1201,8 @@
 .as.mgtv.com
 .as.weixin.qq.com
 .as1.wenku.baidu.com
-.as54rdxfzxs.appspot.com
 .ascpqnj-oam.global.ssl.fastly.net
 .asearch.alicdn.com
-.asgh65tfsdxz.appspot.com
 .asia-northeast1-affiliate-pr.cloudfunctions.net
 .assistjs.skimresources.com
 .assp.sohu.com
@@ -1407,19 +1409,53 @@
 .c-adash.m.taobao.com
 .c-nfa.jd.com
 .c.alimama.com
+.c.ar.msn.com
 .c.arstechnica.com
+.c.at.msn.com
 .c.baidu.com
+.c.be.msn.com
 .c.bingapis.com
+.c.br.msn.com
+.c.ca.msn.com
+.c.cl.msn.com
+.c.de.msn.com
+.c.dk.msn.com
+.c.es.msn.com
+.c.fi.msn.com
+.c.fr.msn.com
 .c.gj.qq.com
+.c.gr.msn.com
+.c.hk.msn.com
+.c.id.msn.com
+.c.ie.msn.com
+.c.il.msn.com
+.c.in.msn.com
+.c.it.msn.com
+.c.jp.msn.com
+.c.latam.msn.com
 .c.live.com
 .c.mse.360.cn
 .c.msn.com
+.c.my.msn.com
 .c.newyorker.com
+.c.nl.msn.com
+.c.no.msn.com
+.c.ph.msn.com
+.c.prodigy.msn.com
+.c.pt.msn.com
+.c.ru.msn.com
 .c.sayhi.360.cn
+.c.se.msn.com
+.c.sg.msn.com
 .c.sm.cn
+.c.th.msn.com
+.c.tr.msn.com
+.c.tw.msn.com
 .c.uaa.iqiyi.com
+.c.uk.msn.com
 .c.wired.com
 .c.yes.youku.com
+.c.za.msn.com
 .c00.adobe.com
 .c0e5b87c.solaraweb-alj.pages.dev
 .c0nt4ct-me.pages.dev
@@ -1440,7 +1476,6 @@
 .capture.condenastdigital.com
 .carbonads.com
 .cards-css.iqiyi.com
-.care.help.360.cn
 .carecredit.com.data.adobedc.net
 .carecreditprovidercenter.com.data.adobedc.net
 .carmax.data.adobedc.net
@@ -1470,7 +1505,6 @@
 .cdn-pci.optimizely.com
 .cdn-s-optional.optimizely.com
 .cdn.ark.qq.com
-.cdn.cookielaw.org
 .cdn.exp.xiaomi.com
 .cdn.onesignal.com
 .cdn.shareaholic.net
@@ -1581,6 +1615,7 @@
 .cms.ucweb.com
 .cmshow.gtimg.cn
 .cmsjs.eastmoney.com
+.cmweb.ilike.alibaba.com
 .cn-vmc-images.alicdn.com
 .cn.vercount.one
 .cnbj1.fds.api.xiaomi.com
@@ -1706,7 +1741,6 @@
 .cstm.baidu.com
 .ctobsnssdk.com
 .ctr.hd.sohu.com
-.cu-cn-north00001.gala.convection.cn
 .cu-cn-north00002.gala.convection.cn
 .cub7ktzma4.data.adobedc.net
 .customerevents.dradis.netflix.com
@@ -3022,7 +3056,6 @@
 .d9yk47of1efyy.cloudfront.net
 .da.mgtv.com
 .da.netease.com
-.da032opzasz.appspot.com
 .da26k71rxh0kb.cloudfront.net
 .da327va27j0hh.cloudfront.net
 .da3uf5ucdz00u.cloudfront.net
@@ -3174,6 +3207,7 @@
 .demkc32bq01ah.cloudfront.net
 .demo.emaillpb.adobe.com
 .demoamericas275.adobe.com
+.derangedadage91wis.files.wordpress.com
 .desgao1zt7irn.cloudfront.net
 .deskwww.s3.amazonaws.com
 .dev-push.m.youku.com
@@ -3214,7 +3248,6 @@
 .dgpp7fq3iorb.cloudfront.net
 .dgw7ae5vrovs7.cloudfront.net
 .dgyrizngtcfck.cloudfront.net
-.dgyu536ds.appspot.com
 .dh0c1bz67fuho.cloudfront.net
 .dh0uktvqfaomb.cloudfront.net
 .dh6dm31izb875.cloudfront.net
@@ -3421,6 +3454,7 @@
 .dqd5t8xfxmhi7.cloudfront.net
 .dqif5bl25s0bf.cloudfront.net
 .dqv45r33u0ltv.cloudfront.net
+.dr.soso.com
 .dr3k6qonw2kee.cloudfront.net
 .dr6su5ow3i7eo.cloudfront.net
 .dr6vcclmzwk74.cloudfront.net
@@ -3629,7 +3663,6 @@
 .epic-matomo-prd-fxccc0gmebhpdjgh.z01.azurefd.net
 .epro.sogou.com
 .epro.sohu.com
-.eqit9pzsxz.appspot.com
 .erebor.douban.com
 .ereg.adobe.com
 .err.gflb.flysleep.cn
@@ -3722,7 +3755,6 @@
 .feed.baidu.com
 .feedback-c.zijieapi.com
 .feedback.miui.com
-.feedback.uc.cn
 .feedbackstorage.blob.core.chinacloudapi.cn
 .feedbackws.icloud.com
 .fengkongcloud.com
@@ -3844,7 +3876,6 @@
 .gb.corp.163.com
 .gc.sec.miui.com
 .gcapi.sy.kugou.com
-.gdh4szx.appspot.com
 .gdpr-settings.s3.amazonaws.com
 .gdt.qq.com
 .gdtimg.com
@@ -3982,12 +4013,10 @@
 .heoads.b-cdn.net
 .hesads.akamaized.net
 .hg-statsd.setapp.com
-.hg76ytsdas.appspot.com
 .hghrkhbztb.data.adobedc.net
 .hijack.baidu.com
 .hilton.data.adobedc.net
 .hits.theguardian.com
-.hj67fadszx.appspot.com
 .hjkhxfh.360doc.cn
 .hk.napi.ucweb.com
 .hk2.wns.windows.com
@@ -4065,10 +4094,8 @@
 .hk2sch130022135.wns.windows.com
 .hk2wns1.wns.windows.com
 .hk2wns1b.wns.windows.com
-.hk567rsda.appspot.com
 .hkjcweb.data.adobedc.net
 .hkrpg-log-upload.mihoyo.com
-.hksdf924pzxoias.appspot.com
 .hl2rcv.adobe.com
 .hlrcv.stage.adobe.com
 .hm.baidu.com
@@ -4204,6 +4231,7 @@
 .imagev2.tx.xmcdn.com
 .img-dsp.oss-cn-beijing.aliyuncs.com
 .img-x.jd.com
+.img.alibaba.com
 .img.gou.wpscdn.cn
 .img.response.digicert.com
 .img.ssl.msdk.qq.com
@@ -4247,7 +4275,6 @@
 .install2.kugou.com
 .installer.xiaomi.com
 .instant-e-app-for-campaign.github.io
-.instory-log.ucnews.ucweb.com
 .int.dpool.sina.com.cn
 .intake-analytics.wikimedia.org
 .intake-logging.wikimedia.org
@@ -4287,7 +4314,6 @@
 .iwan-s.video.qq.com
 .iwan.sogou.com
 .iwanad.baidu.com
-.iwe8pzosa.appspot.com
 .iyes.youku.com
 .j.br.baidu.com
 .j.wit.qq.com
@@ -4325,9 +4351,9 @@
 .jswebcollects.kugou.com
 .juggler.services.disqus.com
 .jun01.oss-cn-beijing.aliyuncs.com
+.jzclick.soso.com
 .jzt.jd.com
 .k.qwant.com
-.k87yfgsdaa.appspot.com
 .k8s-matomo-matomoin-1abe0536fc-1571093737.us-east-1.elb.amazonaws.com
 .kalstats.kaltura.com
 .kbox-analytics-prod.s3-accelerate.amazonaws.com
@@ -4337,7 +4363,6 @@
 .kepler.jd.com
 .kew3pculob.data.adobedc.net
 .key.com.data.adobedc.net
-.kga9szxosa.appspot.com
 .kgb-ifs.tanx.com
 .kgipadstat.kugou.com
 .kgipadstatbak.kugou.com
@@ -4346,12 +4371,9 @@
 .kinesis.eu-west-1.amazonaws.com
 .kingdata.ksyun.com
 .kinstruments-measurements.s3-external-1.amazonaws.com
-.kj65rdasz.appspot.com
-.kj6787rsd.appspot.com
 .kmmgoogle.oss-ap-southeast-1.aliyuncs.com
 .knicks.jd.com
 .kq7rqzqxy4.data.adobedc.net
-.kr9apzxosa.appspot.com
 .kraken-measurements.s3-external-1.amazonaws.com
 .kroger.data.adobedc.net
 .kstj.baidu.com
@@ -4620,7 +4642,6 @@
 .mail-ads.google.com
 .mail-cytanet.pages.dev
 .mailmunch.s3.amazonaws.com
-.mailsupport-24f7f1500ed129bc71f2ad9c06fe1e73.pages.dev
 .mam.netease.com
 .mapi.m.jd.com
 .mapp.qzone.qq.com
@@ -4631,7 +4652,6 @@
 .marketing.alibaba.com
 .marketing.dropbox.com
 .marketing.mangacopy.com
-.marketingplatform.google.com
 .marketo.clearbit.com
 .mars.jd.com
 .marshandmclennan.data.adobedc.net
@@ -4714,6 +4734,7 @@
 .metrics.proquest.com
 .metrics.sites.stanford.edu
 .metrics.stanford.edu
+.metrics.theatlantic.com
 .metrics.zacks.com
 .mg.games.sina.com.cn
 .mgtv-bbqn.oss-cn-beijing.aliyuncs.com
@@ -4752,6 +4773,7 @@
 .mj-snowplow-static-js.s3.amazonaws.com
 .mjca-yijws.global.ssl.fastly.net
 .ml314.com
+.mlpoo11-secondary.z13.web.core.windows.net
 .mmgame.qpic.cn
 .mn.qwant.com
 .mnaspm.com
@@ -4773,6 +4795,7 @@
 .mobileads.msn.com
 .mobileanalytics.us-east-1.amazonaws.com
 .mobilecrashreporting.googleapis.com
+.mobileleads.msn.com
 .mobilelog.kugou.com
 .mobilem.360.cn
 .mobilemsg.youku.com
@@ -4793,6 +4816,7 @@
 .monitor.azure.com
 .monitor.music.qq.com
 .monitor.qq.com
+.mononoteapp.firebaseio.com
 .monorail-edge.shopifysvc.com
 .monsetting.toutiao.com
 .mosaicone-lb-telemetry-prod-56a065490ca45ae3.elb.us-east-1.amazonaws.com
@@ -4899,7 +4923,6 @@
 .nexusrules.officeapps.live.com
 .nexxtv-events.servicebus.windows.net
 .nfa.jd.com
-.nffdg43zx.appspot.com
 .nfsvgvusih.data.adobedc.net
 .nhtradecfg.eastmoney.com
 .ninja.akamaized.net
@@ -4925,6 +4948,7 @@
 .nsclickvideo.baidu.com
 .nvm6zgsnhj.data.adobedc.net
 .nxet1.360doc.cn
+.nytadvertising.nytimes.com
 .o.lenovo.com
 .o2o-ad-dev.oss-cn-shanghai.aliyuncs.com
 .o2o.api.xiaomi.com
@@ -4934,6 +4958,7 @@
 .ocbc.data.adobedc.net
 .oceanengine.com
 .odp.optimizely.com
+.offer.alibaba.com
 .office-service.pp.ua
 .officedepot.com.data.adobedc.net
 .officehub.nel.measure.office.net
@@ -4941,7 +4966,7 @@
 .ogads-pa.clients6.google.com
 .ogads-pa.googleapis.com
 .ohm-dot-hackster-io.appspot.com
-.oi8ytfzxa.appspot.com
+.oimsgad.qq.com
 .omappapi.com
 .omgid.qq.com
 .omgmta1.qq.com
@@ -5135,6 +5160,8 @@
 .ping.acc.sogou.com
 .pingback.giphy.com
 .pingback.sogou.com
+.pingfore.qq.com
+.pingfore.soso.com
 .pinghot.qq.com
 .pingjs.qq.com
 .pingma.qq.com
@@ -5212,7 +5239,6 @@
 .posthog-proxy-service-prod-eu-bfb365ef029ea8b9.elb.eu-central-1.amazonaws.com
 .posthog-proxy-service-prod-us-786081f7c4028325.elb.us-east-1.amazonaws.com
 .posthog.substack.com
-.postmediamontrealgazette2.files.wordpress.com
 .powerpoint-telemetry.officeapps.live.com
 .powr-counter.herokuapp.com
 .ppc-excel-telemetry.officeapps.live.com
@@ -5225,7 +5251,6 @@
 .practivate.adobe.com
 .prd-dvc-pod1-telemetry-alb-podlb-1839613386.us-west-2.elb.amazonaws.com
 .prd-dvc-pod3-telemetry-alb-podlb-2098002532.us-east-1.elb.amazonaws.com
-.prd-lender.cdp.internal.unity3d.com
 .prd-usw2-requestattribution-iad.apple.com
 .prebid-collector-lb-321145981.eu-west-1.elb.amazonaws.com
 .prebid-server-production.herokuapp.com
@@ -5234,6 +5259,7 @@
 .presence.teams.live.com
 .presentationtracking.netflix.com
 .preview.msn.com
+.prexyone.appspot.com
 .privacy-center.org
 .privacy-policy.truste.com
 .prod-analytics-events-lb-1831464947.us-east-1.elb.amazonaws.com
@@ -5326,8 +5352,10 @@
 .qpb0.sohu.com
 .qpb1.sohu.com
 .qqdata.ab.qq.com
+.qqlogo.qq.com
 .qqshow2-item.qq.com
 .qreport.qunar.com
+.qring-tms.qq.com
 .qrl.existence.pp.ua
 .qss-client.qq.com
 .qt2-ngfts.lge.com
@@ -5353,7 +5381,9 @@
 .rad.microsoft.com
 .rad.msn.com
 .rads.msn.com
+.rads.stackoverflow.com
 .raine.accuweather.com
+.rapid-glade-cde8.asoumare042024.workers.dev
 .rating6.kingsoft-office-service.com
 .raw.vidyard.com
 .rawtelemetry-east.servicebus.windows.net
@@ -5428,6 +5458,7 @@
 .rh.qq.com
 .rich.qq.com
 .richmedia.video.qq.com
+.richmedia.yimg.com
 .rics.data.adobedc.net
 .riqhisfus.com
 .risk.clearbit.com
@@ -5480,7 +5511,6 @@
 .rum.us-west-1.amazonaws.com
 .rum.us-west-2.amazonaws.com
 .rus.miui.com
-.ruw82qpzxas.appspot.com
 .s-adashx.ut.uc.cn
 .s.360.cn
 .s.baidu.com
@@ -5620,6 +5650,7 @@
 .shooter.m.jd.com
 .shouji.360.cn
 .shouji.sogou.com
+.show-msgch.qq.com
 .show.look.360.cn
 .showmax.data.adobedc.net
 .showwxml.qq.com
@@ -5648,7 +5679,6 @@
 .sm.toutiao.com
 .smartad.10010.com
 .smartadserver.com.akamaized.net
-.smartlock.google.com
 .smetrics.accuweather.com
 .smetrics.afpjobs.amazon.com
 .smetrics.digicert.com
@@ -5706,6 +5736,7 @@
 .splashqqlive.gtimg.com
 .spo.nel.measure.office.net
 .spocs.getpocket.com
+.spolecznosci.mgr.consensu.org
 .sponsor-logos.s3.amazonaws.com
 .spoor-api.ft.com
 .spotops.spot.im
@@ -5781,6 +5812,7 @@
 .stats.autohome.com.cn
 .stats.bbc.co.uk
 .stats.blogger.com
+.stats.fastcompany.com
 .stats.figshare.com
 .stats.kaltura.com
 .stats.kde.org
@@ -5833,6 +5865,7 @@
 .superrtl.data.adobedc.net
 .supportmetrics.apple.com
 .supportmetrics.v.aaplimg.com
+.survey.china.alibaba.com
 .surveygizmobeacon.s3.amazonaws.com
 .susapi.lenovomm.com
 .suvset.sohu.com
@@ -5969,7 +6002,7 @@
 .timon.zijieapi.com
 .tinglog.baidu.com
 .tiqcdn.com
-.tir94wepsdxox.appspot.com
+.titkoshirek.wordpress.com
 .tj.b.qq.com
 .tj.kugou.com
 .tj.video.qq.com
@@ -6012,6 +6045,7 @@
 .toolbar.baidu.com
 .toolbar.google.com
 .toolbar.msn.com
+.toolbar.soso.com
 .tools.3g.qq.com
 .top.h.qhimg.com
 .toruk.tanx.com
@@ -6026,7 +6060,6 @@
 .tpush.html5.qq.com
 .tr.p.360.cn
 .tr.www.cloudflare.com
-.tr54sdsazxas.appspot.com
 .trace.qq.com
 .trace.svc.ui.com
 .trace.zhiyan.tencent-cloud.net
@@ -6088,7 +6121,6 @@
 .trkhinv.business.hsbc.com.hk
 .trksvg.business.hsbc.com.hk
 .trtcmobileappprod.data.adobedc.net
-.tru465rsda.appspot.com
 .tsb.data.adobedc.net
 .tsearch.snssdk.com
 .tsyndicate.com
@@ -6122,6 +6154,7 @@
 .udc.msn.com
 .udd1i5.zhihu.com
 .udpolimenew.baidu.com
+.uedata.amazon.com
 .ufosdk.baidu.com
 .ug.snssdk.com
 .ugcup.music.qq.com
@@ -6167,9 +6200,11 @@
 .unionimage.baidu.com
 .unitacs.m.taobao.com
 .unitelogreport.reader.qq.com
+.unityads.unity.cn
 .unityads.unity3d.com
 .universalorlando.com.data.adobedc.net
 .universalstudioshollywood.com.data.adobedc.net
+.unstat.baidu.com
 .up-hl.3g.qq.com
 .up1.tj.u2.ucweb.com
 .up4.ucweb.com
@@ -6220,7 +6255,6 @@
 .uve.weibo.com
 .uvgxhu.ezgif.com
 .uvk.3hentai.net
-.uy054eprsdoz.appspot.com
 .uz-analysis.akamaized.net
 .v.miguvideo.com
 .v.shopify.com
@@ -6245,6 +6279,7 @@
 .vd.emp.prd.s3.amazonaws.com
 .vebo-vast.pages.dev
 .vegslb.com
+.vendorlist.consensu.org
 .venezia-measurements.s3-external-1.amazonaws.com
 .verizontelecom.data.adobedc.net
 .vf.startpage.com
@@ -6272,6 +6307,7 @@
 .vlive.qqvideo.tc.qq.com
 .vmat.gtimg.com
 .vmonitor.ws.netease.com
+.voduscdn.azureedge.net
 .volcsiriusbd.com
 .volkswagenofamerica.data.adobedc.net
 .vonage.data.adobedc.net
@@ -6355,7 +6391,6 @@
 .win10.ipv6.microsoft.com
 .win1710.ipv6.microsoft.com
 .win8.ipv6.microsoft.com
-.windowsphishingalert158.s3.amazonaws.com
 .winonexd.b-cdn.net
 .wip3.adobe.com
 .wisepush.video.baidu.com
@@ -6394,6 +6429,8 @@
 .www-fmhy.pages.dev
 .www-google-analytics.l.google.com
 .www-googletagmanager.l.google.com
+.www.addtoany.com
+.www.visualwebsiteoptimizer.com
 .www5.oss-cn-hangzhou.aliyuncs.com
 .www7.springer.com
 .wxaintpcos.wxqcloud.qq.com.cn
@@ -6406,7 +6443,6 @@
 .x.jd.com
 .x.skimresources.com
 .x.weather.com
-.xasf32easzx.appspot.com
 .xblgdvrassets3010.blob.core.windows.net
 .xc.mydrivers.com
 .xcf-bd-js.chuimg.com
@@ -6423,7 +6459,6 @@
 .xmaterial.tu.qq.com
 .xmpush.xiaomi.com
 .xne1ocient87zxz.360doc.cn
-.xoada0pzosa.appspot.com
 .xp2023-pix.s3.amazonaws.com
 .xpi.data.adobedc.net
 .xpj08.oss-cn-beijing.aliyuncs.com
@@ -6464,10 +6499,7 @@
 .ys2000.cdn.bcebos.com
 .yt-adp.nosdn.127.net
 .yt-adp.ws.126.net
-.ytuy45fxs.appspot.com
-.yu56tdfcxc.appspot.com
 .yuedu.iqiyi.com
-.yuhfdwesaa.appspot.com
 .yule.sohu.com
 .yun-hl.3g.qq.com
 .yunxinfw.com
@@ -6545,6 +6577,7 @@ api-js.mixpanel.com
 api.chat.xiaomi.net
 api.e.kuaishou.com
 api.hybrid.intl.xiaomi.com
+api.sec.intl.miui.com
 api.yuedu.iqiyi.com
 api2.e.kuaishou.com
 apiv4-iyes.youku.com
@@ -6721,7 +6754,6 @@ proxy-mob-cld.alicdn.com
 public.gdtimg.com
 qgnu18wo.sina.cn
 qiye.xiaomi.com
-qring-tms.qq.com
 quickaplus-server-api-cn-zhangjiakou.aliyuncs.com
 qzs.gdtimg.com
 r.dmp.sina.cn
