--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-08-16 10:44:03
-# Total rules: 6891
+# Generated from relevant_rules_wildcard_aware.txt on 2025-08-17 12:49:23
+# Total rules: 6885
 
 .0a0d-d3l1vr.b-cdn.net
 .0gc6y58nkk.data.adobedc.net
@@ -26,6 +26,7 @@
 .1oavsblobprodcus350.blob.core.windows.net
 .1wincdn.b-cdn.net
 .2016.sina.cn
+.2025.ip138.com
 .2052.flash2-http.qq.com
 .2g312kn32qfy-1323053341.cos.ap-bangkok.myqcloud.com
 .2ihjjahguz.data.adobedc.net
@@ -43,7 +44,6 @@
 .3rd.t.sohu.com
 .3site-rss.s3-ap-northeast-1.amazonaws.com
 .4393eb8c.solaraweb-alj.pages.dev
-.4mi7nssfk1.data.adobedc.net
 .51.la
 .60aaf9c6.salamanderprocessing.pages.dev
 .643108e7617ef.cdn.sohucs.com
@@ -106,12 +106,9 @@
 .a1208440116.cdn.optimizely.com
 .a12265111463.cdn.optimizely.com
 .a125375509.cdn.optimizely.com
-.a12576840187.cdn.optimizely.com
 .a12600010354.cdn.optimizely.com
 .a12856330147.cdn.optimizely.com
 .a12862740503.cdn.optimizely.com
-.a12879740169.cdn.optimizely.com
-.a130654005.cdn.optimizely.com
 .a13296620007.cdn.optimizely.com
 .a13302150067.cdn.optimizely.com
 .a134224613.cdn.optimizely.com
@@ -128,7 +125,6 @@
 .a15766640529.cdn.optimizely.com
 .a15781310249.cdn.optimizely.com
 .a15782051476.cdn.optimizely.com
-.a15784060578.cdn.optimizely.com
 .a15928870500.cdn.optimizely.com
 .a16059120202.cdn.optimizely.com
 .a16233910394.cdn.optimizely.com
@@ -212,7 +208,6 @@
 .a20758793323.cdn.optimizely.com
 .a208064236.cdn.optimizely.com
 .a20896371799.cdn.optimizely.com
-.a20920185503.cdn.optimizely.com
 .a20936640092.cdn.optimizely.com
 .a20976504213.cdn.optimizely.com
 .a21006041081.cdn.optimizely.com
@@ -232,11 +227,9 @@
 .a21362261371.cdn.optimizely.com
 .a21362900246.cdn.optimizely.com
 .a21394690517.cdn.optimizely.com
-.a21645491094.cdn.optimizely.com
 .a21711352012.cdn.optimizely.com
 .a21723500485.cdn.optimizely.com
 .a21777400434.cdn.optimizely.com
-.a21837592637.cdn.optimizely.com
 .a21861931614.cdn.optimizely.com
 .a21875130079.cdn.optimizely.com
 .a22021240096.cdn.optimizely.com
@@ -251,9 +244,7 @@
 .a22612690898.cdn.optimizely.com
 .a22633641389.cdn.optimizely.com
 .a22633721281.cdn.optimizely.com
-.a22704831671.cdn.optimizely.com
 .a22711502979.cdn.optimizely.com
-.a22737870109.cdn.optimizely.com
 .a22744560884.cdn.optimizely.com
 .a22788570099.cdn.optimizely.com
 .a22791482274.cdn.optimizely.com
@@ -277,7 +268,6 @@
 .a24132941202.cdn.optimizely.com
 .a24201730177.cdn.optimizely.com
 .a24312020311.cdn.optimizely.com
-.a24344740158.cdn.optimizely.com
 .a24389681160.cdn.optimizely.com
 .a24397840812.cdn.optimizely.com
 .a24427100571.cdn.optimizely.com
@@ -285,14 +275,13 @@
 .a24561750242.cdn.optimizely.com
 .a24591270085.cdn.optimizely.com
 .a24612720185.cdn.optimizely.com
+.a24622810079.cdn.optimizely.com
 .a24656750324.cdn.optimizely.com
 .a24684600044.cdn.optimizely.com
 .a24698640007.cdn.optimizely.com
 .a247012668.cdn.optimizely.com
 .a24704070387.cdn.optimizely.com
 .a24708080542.cdn.optimizely.com
-.a24708110218.cdn.optimizely.com
-.a24716580415.cdn.optimizely.com
 .a24717620105.cdn.optimizely.com
 .a24723780022.cdn.optimizely.com
 .a24731660284.cdn.optimizely.com
@@ -309,18 +298,15 @@
 .a25010540072.cdn.optimizely.com
 .a25011560114.cdn.optimizely.com
 .a25048791137.cdn.optimizely.com
+.a25067410829.cdn.optimizely.com
 .a25166270452.cdn.optimizely.com
 .a25178000050.cdn.optimizely.com
-.a25229420187.cdn.optimizely.com
 .a25237771658.cdn.optimizely.com
 .a25241431181.cdn.optimizely.com
 .a25241461358.cdn.optimizely.com
 .a25243410878.cdn.optimizely.com
-.a25255011705.cdn.optimizely.com
 .a25264541367.cdn.optimizely.com
-.a25272300036.cdn.optimizely.com
 .a25289140643.cdn.optimizely.com
-.a25312460735.cdn.optimizely.com
 .a25342060228.cdn.optimizely.com
 .a25408250069.cdn.optimizely.com
 .a25451710626.cdn.optimizely.com
@@ -370,6 +356,7 @@
 .a26564690691.cdn.optimizely.com
 .a26584670725.cdn.optimizely.com
 .a26589780290.cdn.optimizely.com
+.a26592620004.cdn.optimizely.com
 .a26604040285.cdn.optimizely.com
 .a2665520353.cdn.optimizely.com
 .a26669750187.cdn.optimizely.com
@@ -409,7 +396,6 @@
 .a28554780121.cdn.optimizely.com
 .a28826650685.cdn.optimizely.com
 .a2900460605.cdn.optimizely.com
-.a29022480071.cdn.optimizely.com
 .a29086100055.cdn.optimizely.com
 .a29203880216.cdn.optimizely.com
 .a29208100149.cdn.optimizely.com
@@ -418,7 +404,6 @@
 .a29494440593.cdn.optimizely.com
 .a29563440009.cdn.optimizely.com
 .a29586640232.cdn.optimizely.com
-.a29598040139.cdn.optimizely.com
 .a29623890030.cdn.optimizely.com
 .a29730520486.cdn.optimizely.com
 .a29734250217.cdn.optimizely.com
@@ -442,6 +427,7 @@
 .a3058550533.cdn.optimizely.com
 .a315407138.cdn.optimizely.com
 .a3179610124.cdn.optimizely.com
+.a401751626.cdn.optimizely.com
 .a4242406432.cdn.optimizely.com
 .a4268742351.cdn.optimizely.com
 .a4368606971.cdn.optimizely.com
@@ -458,6 +444,7 @@
 .a47b-collector-alb-630215029.us-east-1.elb.amazonaws.com
 .a47b-collector-eu-alb-1031015564.eu-west-1.elb.amazonaws.com
 .a4806508815319040.cdn.optimizely.com
+.a4912227187163136.cdn.optimizely.com
 .a4978460394.cdn.optimizely.com
 .a4983603034062848.cdn.optimizely.com
 .a4993150444371968.cdn.optimizely.com
@@ -469,6 +456,7 @@
 .a5171550442225664.cdn.optimizely.com
 .a5173948275490816.cdn.optimizely.com
 .a524690941.cdn.optimizely.com
+.a5292374380249088.cdn.optimizely.com
 .a5324015129067520.cdn.optimizely.com
 .a5354424722259968.cdn.optimizely.com
 .a5364082103025664.cdn.optimizely.com
@@ -478,14 +466,15 @@
 .a5584628518486016.cdn.optimizely.com
 .a5590338467790848.cdn.optimizely.com
 .a5595260258.cdn.optimizely.com
+.a5607107806887936.cdn.optimizely.com
 .a5676741851611136.cdn.optimizely.com
+.a5682661843271680.cdn.optimizely.com
 .a5698391926112256.cdn.optimizely.com
 .a5728063363743744.cdn.optimizely.com
 .a5729668758765568.cdn.optimizely.com
 .a5740182066954240.cdn.optimizely.com
 .a5763127292198912.cdn.optimizely.com
 .a5807877756026880.cdn.optimizely.com
-.a5809436334227456.cdn.optimizely.com
 .a591102174.cdn.optimizely.com
 .a5935064.cdn.optimizely.com
 .a5961084.cdn.optimizely.com
@@ -497,7 +486,6 @@
 .a6089398316433408.cdn.optimizely.com
 .a61135178.cdn.optimizely.com
 .a6136581106.cdn.optimizely.com
-.a6146157886308352.cdn.optimizely.com
 .a6147442509348864.cdn.optimizely.com
 .a6147784059912192.cdn.optimizely.com
 .a6157793305034752.cdn.optimizely.com
@@ -760,9 +748,9 @@
 .ads-img.mozilla.org
 .ads-jp.tiktok.com
 .ads-marketing-vivofs.vivo.com.cn
-.ads-meta-logo.s3.amazonaws.com
 .ads-privacy-api.prd.mz.internal.unity3d.com
 .ads-prod-narrowcasting.s3.us-west-2.amazonaws.com
+.ads-product-integration.googleusercontent.com
 .ads-production-public.s3.amazonaws.com
 .ads-production-public.s3.us-east-1.amazonaws.com
 .ads-rendering-prod.corp.google.com
@@ -825,7 +813,6 @@
 .adsclick.qq.com
 .adsdk.microsoft.com
 .adsdk.vivo.com.cn
-.adsdkpreprod.afd.azureedge.net
 .adsdkpreprod.azureedge.net
 .adsdkprod.afd.azureedge.net
 .adsdkprod.azureedge.net
@@ -987,6 +974,7 @@
 .alissl.ucdl.pp.uc.cn
 .alitui.weibo.com
 .aliyaoberbrunnergreg21.myshopify.com
+.alliancedata.data.adobedc.net
 .als-svc.nytimes.com
 .altmetric.com
 .altura-advertising.s3.eu-west-2.amazonaws.com
@@ -1059,7 +1047,7 @@
 .analytics.msn.com
 .analytics.msnbc.msn.com
 .analytics.notify.elsevier.com
-.analytics.p04.eloqua.com
+.analytics.p01.eloqua.com
 .analytics.paddle.com
 .analytics.pnw.appsvc.an.adobe.com
 .analytics.podtrac.com
@@ -1149,7 +1137,6 @@
 .api.setting.intl.miui.com
 .api.sms.intl.miui.com
 .api.stacksocial.com
-.api.tv.sohu.com
 .api.uca.cloud.unity3d.com
 .api.waptest.taobao.com
 .api.xmpush.global.xiaomi.com
@@ -1240,6 +1227,7 @@
 .asia-northeast1-affiliate-pr.cloudfunctions.net
 .assistjs.skimresources.com
 .assp.sohu.com
+.astat-bugly-tgw4l.mig.tencent-cloud.net
 .atanx.alicdn.com
 .atanx2.alicdn.com
 .athena.archive.org
@@ -1260,6 +1248,7 @@
 .audinar.data.adobedc.net
 .audio-ak.cdn.spotify.com
 .audio.ali.xmcdn.com
+.audit.aaa.mgtv.com
 .aurora-d3.herokuapp.com
 .australiapost.data.adobedc.net
 .auth.be.sec.miui.com
@@ -1310,6 +1299,7 @@
 .bcbsks.data.adobedc.net
 .bce.baidu.com
 .bchtstmets.data.adobedc.net
+.bcs.data.adobedc.net
 .bd.hd.sohu.com
 .bdg-analytics.appspot.com
 .bdplus.baidu.com
@@ -1394,6 +1384,7 @@
 .bn4sch101123110.wns.windows.com
 .bn4sch101123202.wns.windows.com
 .bn4sch102110124.wns.windows.com
+.bnpp2s.data.adobedc.net
 .bobo.163.com
 .bobo.corp.163.com
 .bole.shangshufang.ksosoft.com
@@ -1631,6 +1622,7 @@
 .cloudfront-labs.amazonaws.com
 .cloudpush.iqiyi.com
 .cltgtstor001.blob.core.windows.net
+.clubhkt.data.adobedc.net
 .cm.baidu.com
 .cm.bilibili.com
 .cm.jd.com
@@ -1654,7 +1646,6 @@
 .cnbj1.fds.api.xiaomi.com
 .cnzz.com
 .co.data.adobedc.net
-.coca-cola.com.data.adobedc.net
 .coins.arstechnica.com
 .collect.alipay.com
 .collect.ctc.ximalaya.com
@@ -1677,7 +1668,6 @@
 .concertads-configs.vox-cdn.com
 .conde.digital
 .conduenttransportsolutionsinc.data.adobedc.net
-.conf-sg-dc.heytapdl.com.akamaized.net
 .conf.international.baidu.com
 .conf.wifi.360.cn
 .confiant-integrations.global.ssl.fastly.net
@@ -1769,6 +1759,7 @@
 .crm.ws.ctrip.com
 .crs.baidu.com
 .cryweb.github.io
+.cs-feige.iqiyi.com
 .csi.gstatic.com
 .csp-collector.appspot.com
 .csp-reporting.cloudflare.com
@@ -3341,6 +3332,7 @@
 .djv99sxoqpv11.cloudfront.net
 .djvby0s5wa7p7.cloudfront.net
 .djwf0dl2q9i99.cloudfront.net
+.djxzp32zyq.data.adobedc.net
 .djz9es32qen64.cloudfront.net
 .dk45agakx3yfl.cloudfront.net
 .dk4w74mt6naf3.cloudfront.net
@@ -3747,7 +3739,6 @@
 .events.iap.unity3d.com
 .events.launchdarkly.com
 .events.mapbox.com
-.events.mobile.optimizely.com
 .events.reddit.com
 .events.redditmedia.com
 .events.release.narrativ.com
@@ -3950,7 +3941,6 @@
 .gld.samsungosp.com
 .glitter.services.disqus.com
 .global-ad-extranet-pri-azams.alb.xiaomi.com
-.global-ad-extranet-pri-azpn.alb.xiaomi.com
 .global-ad-intl-pri-alisgp.alb.xiaomi.com
 .global-staticplat.cdn.bcebos.com
 .globalnews.ca.data.adobedc.net
@@ -4137,6 +4127,7 @@
 .hlrcv.stage.adobe.com
 .hm.baidu.com
 .hmma.baidu.com
+.hnpkxjfbax.data.adobedc.net
 .hog.crowdin.com
 .homeborn.cn
 .hoplink.ksosoft.com
@@ -4194,7 +4185,6 @@
 .hyros-prod-tracking-elb-1961909740.us-east-1.elb.amazonaws.com
 .hz-telemetry.adobe.io
 .hz.youku.com
-.i-cmg-amlg-prod.appspot.com
 .i.eporner.com
 .i.paypal.com
 .i.posthog.com
@@ -4221,6 +4211,7 @@
 .ichnaea.dradis.netflix.com
 .ichnaea.netflix.com
 .id.google.com
+.id.l.google.com
 .idce7nfume.data.adobedc.net
 .identity.nel.measure.office.net
 .idm-su.baidu.com
@@ -4239,12 +4230,12 @@
 .igexin.com
 .ignifyecom.s3.amazonaws.com
 .ihg.com.data.adobedc.net
-.iix5saebir.data.adobedc.net
 .ikcode.baidu.com
 .ilce.alicdn.com
 .ilive.qq.com
 .ilyonanalytics.herokuapp.com
 .im-x.jd.com
+.im2txpc0v0.data.adobedc.net
 .image-ad.sm.cn
 .image.9game.cn
 .image.box.xiaomi.com
@@ -4340,7 +4331,6 @@
 .ipv6.kg.qq.com
 .ipv6.music.163.com
 .ir.mail.163.com
-.iriscapitallimited.data.adobedc.net
 .irpmt.mail.163.com
 .isdspeed.qq.com
 .isite.baidu.com
@@ -4484,13 +4474,14 @@
 .location.ximalaya.com
 .log-04e01638.us.v2.we-stats.com
 .log-1172d361.ind.v2.we-stats.com
-.log-13eac704.us.v2.we-stats.com
 .log-1ca8ebd0.us.v2.we-stats.com
+.log-1e027846.us.v2.we-stats.com
 .log-23811e0f.us.v2.we-stats.com
 .log-24b4fa14.us.v2.we-stats.com
 .log-26d6cd71.us.v2.we-stats.com
 .log-2c864c4b.eu.v2.we-stats.com
 .log-2f6769e4.us.v2.we-stats.com
+.log-2ffe60ee.au.v2.we-stats.com
 .log-3347ea06.bzl.v2.we-stats.com
 .log-3fbbe2c8.us.v2.we-stats.com
 .log-453ea5e6.ind.v2.we-stats.com
@@ -4502,6 +4493,7 @@
 .log-7db8f4a6.us.v2.we-stats.com
 .log-7ef308be.us.v2.we-stats.com
 .log-86a11b6f.us.v2.we-stats.com
+.log-876f0067.us.v2.we-stats.com
 .log-87e12e85.suk.v2.we-stats.com
 .log-9449377.eu-west-2.elb.amazonaws.com
 .log-96951fce.us.v2.we-stats.com
@@ -4685,6 +4677,7 @@
 .mail-cytanet.pages.dev
 .mailmunch.s3.amazonaws.com
 .mam.netease.com
+.mam6.netease.com
 .mapi.m.jd.com
 .mapp.qzone.qq.com
 .marcus.com.data.adobedc.net
@@ -4705,7 +4698,6 @@
 .matchbin-assets.s3.amazonaws.com
 .matomo-alb-1841731790.us-east-1.elb.amazonaws.com
 .matomo-lb-1420184415.us-east-1.elb.amazonaws.com
-.matomo-production-313173901.us-east-2.elb.amazonaws.com
 .matomo-wpmudev-analytics1-925643958.us-east-2.elb.amazonaws.com
 .matomo-wpmudev-analytics2-742601353.us-east-2.elb.amazonaws.com
 .matomo-wpmudev-analytics3-898024192.us-east-2.elb.amazonaws.com
@@ -4744,6 +4736,7 @@
 .measure.office.com
 .measure.office.com.akamaized.net
 .measure.sanity.io
+.medad.med.wanfangdata.com.cn
 .media.globalsign.com
 .media6degrees.com.cdn.cloudflare.net
 .mediation-tracking.prd.mz.internal.unity3d.com
@@ -4931,7 +4924,6 @@
 .nadvideo.baidu.com
 .nadvideo2.baidu.com
 .napaprolink.com.data.adobedc.net
-.nationalbankofcanada.data.adobedc.net
 .nativead.s3.amazonaws.com
 .nativeapp.toutiao.com
 .navispherecarrier.com.data.adobedc.net
@@ -5044,7 +5036,6 @@
 .openmonitor.alipay-eco.com
 .openmonitor.alipay.com
 .openrcv.baidu.com
-.opentelemetry-collector-1730785506.us-east-1.elb.amazonaws.com
 .operate-sdk-telemetry.unity3d.com
 .ophan.theguardian.com
 .oply.hearstapps.com
@@ -5071,7 +5062,6 @@
 .otf.msn.com
 .oth.eve.qq.com
 .ott.video.qq.com
-.oupar5ykmi.data.adobedc.net
 .outbrain.map.fastly.net
 .outlookads.live.com
 .outreach.crossref.org
@@ -5363,7 +5353,6 @@
 .pub-b8121b8e047e42df82e487d7e47e1ef8.r2.dev
 .pubgw.api.ddxq.mobi
 .public-analytics-swiggy-com-766210341.ap-southeast-1.elb.amazonaws.com
-.publish-pic-cpu.baidu.com
 .publisher-assets.spot.im
 .publix.com.data.adobedc.net
 .pubmatic.com
@@ -5392,6 +5381,7 @@
 .pv.sohu.com
 .pvstat.html5.qq.com
 .pvx.autohome.com.cn
+.pwc.com.data.adobedc.net
 .px-intl.ucweb.com
 .px.ucweb.com
 .px.wpk.quark.cn
@@ -5478,7 +5468,6 @@
 .reksaidnslog.security.mihoyo.com
 .rel.msn.com
 .release.baidu.com
-.reliant.com.data.adobedc.net
 .reliantenergy.data.adobedc.net
 .remote-config-prd.uca.cloud.unity3d.com
 .removeads.workers.dev
@@ -5532,6 +5521,8 @@
 .rmonitor.qq.com
 .rnd-aresocean-commercial.huawei.com
 .robalmeister.workers.dev
+.roche.com.data.adobedc.net
+.rogerscommunicationspartnership.data.adobedc.net
 .roi.soulapp.cn
 .romeccs.microsoft.com
 .routertips.video.qq.com
@@ -5550,6 +5541,7 @@
 .rtlog16-normal-alisg.tiktokv.com
 .rtlog16-normal-useast1a.tiktokv.com
 .rtlog17-normal-alisg.tiktokv.com
+.rtlog17-normal-useast1a.tiktokv.com
 .rtlog19-normal-alisg.tiktokv.com
 .rtlog19-normal-useast1a.tiktokv.com
 .rtlog22-normal-alisg.tiktokv.com
@@ -5624,7 +5616,6 @@
 .scribe.twitter.com
 .sd-tagging.azurefd.net
 .sdfp.snssdk.com
-.sdk-collector-prod-723125464.eu-central-1.elb.amazonaws.com
 .sdk.fra-01.braze.eu.cdn.cloudflare.net
 .sdk.iad-01.braze.com.cdn.cloudflare.net
 .sdk.iad-02.braze.com.cdn.cloudflare.net
@@ -5644,7 +5635,6 @@
 .sdn.kugou.com
 .sdsbucket.s3.amazonaws.com
 .sdtagging.azureedge.net
-.sdxvkj0e6a.data.adobedc.net
 .se.360.cn
 .sea.napi.ucweb.com
 .seal.digicert.com
@@ -5711,6 +5701,7 @@
 .shouji.sogou.com
 .show-msgch.qq.com
 .show.look.360.cn
+.showmax.data.adobedc.net
 .showwxml.qq.com
 .shuaji.360.cn
 .shujupie.com
@@ -5724,12 +5715,14 @@
 .simba.m.taobao.com
 .simg.sinajs.cn
 .simple-cdn.s3.amazonaws.com
+.simpliifinancial.data.adobedc.net
 .singular.net
 .sistr2.data.adobedc.net
 .site24x7rum.eu
 .siteintercept.qualtrics.com.cdn.cloudflare.net
 .sjarvis.taobao.com
 .skdisplay.jd.com
+.skydeutschland.data.adobedc.net
 .skyshowtimeuk.data.adobedc.net
 .slb-p2p.vcloud.ks-live.com
 .slog.sina.cn
@@ -6027,6 +6020,7 @@
 .telemetry.visualstudio.microsoft.com
 .teleparty-event-collector-1dc638-1422360718.us-east-1.elb.amazonaws.com
 .teleparty-usage-analytics-baa8a3-1882641526.us-east-1.elb.amazonaws.com
+.telus.data.adobedc.net
 .temai.snssdk.com
 .temai.taobao.com
 .temp.163.com
@@ -6205,6 +6199,7 @@
 .u-mob.cn
 .u-x.jd.com
 .u.360.cn
+.u.api.look.360.cn
 .u.ctrip.com
 .u1.img.mobile.sina.cn
 .uc.ucweb.com
@@ -6392,7 +6387,6 @@
 .w3-reporting-csp.reddit.com
 .w3-reporting-nel.reddit.com
 .w3-reporting.reddit.com
-.w4aa025brr.data.adobedc.net
 .wa.gtimg.com
 .wa.scribd.com
 .walmartasda.data.adobedc.net
