--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-08-26 10:21:39
-# Total rules: 6665
+# Generated from relevant_rules_wildcard_aware.txt on 2025-08-26 16:35:14
+# Total rules: 6668
 
 .0a0d-d3l1vr.b-cdn.net
 .0gc6y58nkk.data.adobedc.net
@@ -55,6 +55,7 @@
 .7q1z79gxsi.global.ssl.fastly.net
 .857chwukib.data.adobedc.net
 .888.tv.sohu.com
+.8rn1y79f02-1.algolianet.com
 .92x.tumblr.com
 .9kvptcrbor.data.adobedc.net
 .9svjumhzt6.data.adobedc.net
@@ -1247,6 +1248,7 @@
 .bsrv.qq.com
 .btf-analytics.s3.amazonaws.com
 .btlaunch.baidu.com
+.btloader.com
 .btrace.qq.com
 .btrace.video.qq.com
 .bts-la.ucweb.com
@@ -6211,6 +6213,7 @@
 .webcollects.kugou.com
 .webd.home.news.cn
 .webmetrics.mayoclinic.org
+.webpushr.com
 .website-security.geotrust.com
 .website-security.rapidssl.com
 .webstat.ws.126.net
