--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-09-03 13:17:09
-# Total rules: 7070
+# Generated from relevant_rules_wildcard_aware.txt on 2025-09-04 09:57:52
+# Total rules: 7086
 
 .0a0d-d3l1vr.b-cdn.net
 .0gc6y58nkk.data.adobedc.net
@@ -677,6 +677,7 @@
 .ads.uc.cn
 .ads.us.tiktok.com
 .ads.v3mh.com
+.ads.wikia.nocookie.net
 .ads.xiaomi.com
 .ads.yimg.com
 .ads.youtube.com
@@ -1287,6 +1288,7 @@
 .braze.com
 .brg0.com
 .browser-intake-datadoghq.com
+.browser-intake-us5-datadoghq.com
 .browser.miui.com
 .browser.vivo.com.cn
 .browserkernel.baidu.com
@@ -1311,6 +1313,7 @@
 .business-api.tiktok.com
 .buysellads.com
 .bxtdlifzik.data.adobedc.net
+.by2.uservoice.com
 .bzclk.baidu.com
 .c-5uwzmx78pmca09x24aiux2euavx2ekwu.g00.msn.com
 .c-adash.m.taobao.com
@@ -1440,6 +1443,7 @@
 .channel4.data.adobedc.net
 .channelusa.samsung.com
 .chaoku.oss-cn-chengdu.aliyuncs.com
+.chartboost.com.akamaized.net
 .chat1.jd.com
 .chatpush.miguvideo.com
 .cheezwhiz.z9.web.core.windows.net
@@ -1827,6 +1831,7 @@
 .cre-dp.sina.cn
 .cre.dp.sina.cn
 .cre.mix.sina.com.cn
+.creative-klepon-3f0ecb.netlify.app
 .creatopy-adtag-production.b-cdn.net
 .creditonebank.data.adobedc.net
 .crl.microsoft.com
@@ -2316,6 +2321,7 @@
 .d1zxg9iar5y3ur.cloudfront.net
 .d1zy4z3rd7svgh.cloudfront.net
 .d1zzcae3f37dfx.cloudfront.net
+.d2.ads.rmbl.ws.cdn.cloudflare.net
 .d2.sina.com.cn
 .d2.sinaimg.cn
 .d200108c6x0w2v.cloudfront.net
@@ -3222,6 +3228,7 @@
 .data.fastlane-email.paypal.com
 .data.glbdns2.microsoft.com
 .data.gm.test.ajo.adobe.com
+.data.grammarly.com
 .data.haoma.sogou.com
 .data.info.mayoclinic.org
 .data.ingspain.test.ajo.adobe.com
@@ -3506,7 +3513,6 @@
 .do69ll745l27z.cloudfront.net
 .doc830ytc7pyp.cloudfront.net
 .docerad.wps.cn
-.docs.gravatar.com
 .dodk8rb03jif9.cloudfront.net
 .dof9zd9l290mz.cloudfront.net
 .dog89nqcp3al4.cloudfront.net
@@ -3738,6 +3744,7 @@
 .ef.opendsp.tanx.com
 .ef.tanx.com
 .effirst.com
+.effulgent-stroopwafel-efb9ce.netlify.app
 .egencia.com.data.adobedc.net
 .eic-ngfts.lge.com
 .eiv.baidu.com
@@ -4024,6 +4031,7 @@
 .globalvideo.cdn.pandora.intl.xiaomi.com
 .gmfinancial.data.adobedc.net
 .gn-flagpoles.api.bbci.co.uk
+.gnar.grammarly.com
 .go-mpulse.net
 .go.shop.app
 .go.sohu.com
@@ -4209,6 +4217,7 @@
 .hog.crowdin.com
 .holaflylimited.data.adobedc.net
 .homeborn.cn
+.honey.io
 .hongkongbaptistuniversity.data.adobedc.net
 .hoplink.ksosoft.com
 .hotchat-im.iqiyi.com
@@ -4444,6 +4453,7 @@
 .jioadsweb.akamaized.net
 .jnb20prdstr01a.store.core.windows.net
 .join.zendesk.com
+.joinhoney.com
 .jpg1.oss-cn-beijing.aliyuncs.com
 .jpush.cn
 .jpush.html5.qq.com
@@ -4538,6 +4548,7 @@
 .livechat.s3.amazonaws.com
 .liveme-sensors-collect2-1901606319.us-east-1.elb.amazonaws.com
 .livestats.kaltura.com
+.lm-publicities.nyc3.digitaloceanspaces.com
 .lm.licenses.adobe.com
 .lm.tv.sohu.com
 .lm1.tuliu.com
@@ -4764,6 +4775,7 @@
 .lycamobileuklimited.data.adobedc.net
 .lynx-prod-beacon-alb-498367235.us-east-1.elb.amazonaws.com
 .m-adash.m.taobao.com
+.m.analytics.126.net.split.ntes53.netease.com
 .m.beehive.in.intl.miui.com
 .m.qpic.cn
 .m.simba.taobao.com
@@ -4917,6 +4929,7 @@
 .mllog.jd.com
 .mlpoo11-secondary.z13.web.core.windows.net
 .mmgame.qpic.cn
+.mms.lifehacker.com
 .mn.qwant.com
 .mnaspm.com
 .mo.baidu.com
@@ -5058,6 +5071,7 @@
 .nelsdf.measure.office.net
 .net.mydays.de
 .netapm.music.163.com
+.netlify-rum.netlify.app
 .newrelic.com
 .newrelic.com.cdn.cloudflare.net
 .news-app-events.apple.com
@@ -5122,7 +5136,6 @@
 .odc.weather.com
 .odp.optimizely.com
 .offer.alibaba.com
-.office-service.pp.ua
 .officedepot.com.data.adobedc.net
 .officehub.nel.measure.office.net
 .offnavi.map.baidu.com
@@ -5433,6 +5446,7 @@
 .prexyone.appspot.com
 .privacy-center.org
 .privacy-policy.truste.com
+.privacyfriendly.netlify.app
 .prod-analytics-events-lb-1831464947.us-east-1.elb.amazonaws.com
 .prod-analytics-snowplow-alb-139478501.us-east-1.elb.amazonaws.com
 .prod-dem-collector-elb-611025824.eu-west-1.elb.amazonaws.com
@@ -5811,6 +5825,7 @@
 .send.preply.com
 .sensors-pro-analytics-nlbtoalb-1031ce3406151b89.elb.ap-northeast-1.amazonaws.com
 .sensors.cloud.tencent.com
+.sentry-monitor-new.zdmimg.com
 .sentry-new.myshopline.com
 .sentry.cointelegraph.com
 .sentry.d.xiaomi.net
@@ -6327,6 +6342,7 @@
 .trafficjunky.net
 .transfer.sec.miui.com
 .trap.skype.com
+.treatment.grammarly.com
 .trends.mobile.sina.cn
 .treverschmelerkris18.myshopify.com
 .trgfx.b-cdn.net
